[gd_scene load_steps=6 format=3 uid="uid://d3151rpt4wd5d"]

[ext_resource type="Script" path="res://scripts/guitar.gd" id="1_f1c3r"]
[ext_resource type="PackedScene" uid="uid://g2yxw6suy0i7" path="res://scenes/agora vai/notas.tscn" id="2_fwprd"]
[ext_resource type="PackedScene" uid="uid://bpwu8ss3637fc" path="res://scenes/agora vai/ondeApertar.tscn" id="3_6ovdk"]
[ext_resource type="Script" path="res://scripts/JSON.gd" id="3_52d4r"]
[ext_resource type="AudioStream" uid="uid://llyrpptghdce" path="res://note-generator/snd_helena.mp3" id="5_0oarp"]

[node name="Guitar" type="Node2D"]
script = ExtResource("1_f1c3r")
tiles = ExtResource("2_fwprd")
bpm = 120.0

[node name="JSON" type="Node" parent="."]
script = ExtResource("3_52d4r")
tiles = ExtResource("2_fwprd")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Baixo" type="Node2D" parent="."]
position = Vector2(220, 310)

[node name="ondeApertar" parent="Baixo" instance=ExtResource("3_6ovdk")]
position = Vector2(-30, 0)

[node name="ondeApertar2" parent="Baixo" instance=ExtResource("3_6ovdk")]

[node name="ondeApertar3" parent="Baixo" instance=ExtResource("3_6ovdk")]
position = Vector2(30, 0)

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(168, 90)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_0oarp")
autoplay = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
